# sampled-casper

./: .env.example  DORAHACKS_SUBMISSION.md  README.md  package-lock.json  package.json  vite.config.ts
api/: rpc.ts
contracts/: Cargo.toml  Odra.toml  build.rs
contracts/src/: errors.rs  events.rs  lib.rs  license_nft.rs  license_types.rs  proxy_caller.rs  sampled_marketplace.rs  types.rs
contracts/wasm/: LicenseNft.wasm  SampledMarketplace.wasm
docs/: HYBRID_NFT_APPROACH.md  NFT_LICENSE_SYSTEM.md
public/wasm/: proxy_caller.wasm
src/: index.css  main.tsx  upload-sample.css
src/@types/: license.ts
src/components/: WalletButton.tsx
src/components/explore/: Explore.tsx  LicenseList.tsx  SampleCard.tsx  SampleListCard.tsx  UserProfile.tsx  UserProfileTabs.tsx  WithdrawEarningsModal.tsx
src/components/landing/: About.tsx  HeroAlt.tsx  ReImagine.tsx
src/components/license/: LicenseSelector.tsx  LicenseSelectorModal.tsx
src/components/music/: PurchaseSampleTab.tsx  SampleDetails.tsx  TradeSample.tsx
src/components/shared/: Header.tsx  InAppHeader.tsx
src/components/upload/: UploadSample.tsx
src/components/wallet/: SwitchNetwork.tsx  WalletConnectionModal.tsx
src/hooks/: useSampledContract.ts  useWalletBalance.ts
src/pages/: MySamples.tsx  SamplePage.tsx
src/providers/: WalletProvider.tsx
src/util/: wallet.ts
