[package]
name = "sampled-contracts"
version = "1.0.0"
edition = "2021"
authors = ["Sampled Team"]
description = "Music Sample Marketplace on Casper Network"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
odra = "1.2.0"

[dev-dependencies]
odra-test = "1.2.0"

[features]
default = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
