[package]
name = "sampled-contracts"
version = "1.0.0"
edition = "2021"
authors = ["Sampled Team"]
description = "Music Sample Marketplace on Casper Network"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sampled_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "proxy_caller"
path = "src/proxy_caller.rs"
test = false

[dependencies]
odra = "2.4"
odra-modules = "2.4"

[build-dependencies]
odra-build = "2.4"

[dev-dependencies]
odra-test = "2.4"

[features]
default = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
